v1.11/traefik/step3-traefik-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30011
